--- a/style.css
+++ b/style.css
@@ -959,7 +959,24 @@ body {
         top: 0;
     }
 
-    #nav svg {
+    #page1 #nav #balmiki {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: flex-start;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
+        justify-content: center;
+        padding: 1.3vw 5vw;
+        position: fixed;
+        width: 100%;
+        /* background-color: red; */
+        top: 0;
+    }
+
+    #nav #balmiki h1 {
         scale: 0.8;
     }
 
@@ -1093,7 +1110,7 @@ body {
         position: relative;
         padding: 17vh 3vw 0 3vw;
         margin-bottom: 0vh;
-        margin-top: 0vh;
+        margin-top: 9vh;
     }
 
     #page3 h1 {
